--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Demo project">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="/">
+    
     <link rel="stylesheet" type="text/css" href="./assets/vendor/bootstrap4/bootstrap.min.css">
     <link href="./assets/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
@@ -14,8 +16,10 @@
     <link rel="stylesheet" type="text/css" href="./assets/plugins/jquery.mb.YTPlayer-3.1.12/jquery.mb.YTPlayer.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/main_styles.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/contact.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/contact_responsive.css">
     <title>Cuba Museo</title>
-    <base href="/">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -31,6 +35,8 @@
     <script src="./assets/plugins/masonry/masonry.js"></script>
     <script src="./assets/plugins/masonry/images_loaded.js"></script>
     <script src="./assets/js/custom.js"></script>
+    <script src="./assets/plugins/parallax-js-master/parallax.min.js"></script>
+    <script src="./assets/js/contact.js"></script>
 </body>
 
 </html>
