--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" type="text/css" href="./assets/plugins/jquery.mb.YTPlayer-3.1.12/jquery.mb.YTPlayer.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/main_styles.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/responsive.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/contact.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/contact_responsive.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/contact.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/contact_responsive.css"> -->
     <title>Cuba Museo</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,8 +35,8 @@
     <script src="./assets/plugins/masonry/masonry.js"></script>
     <script src="./assets/plugins/masonry/images_loaded.js"></script>
     <script src="./assets/js/custom.js"></script>
-    <script src="./assets/plugins/parallax-js-master/parallax.min.js"></script>
-    <script src="./assets/js/contact.js"></script>
+    <!-- <script src="./assets/plugins/parallax-js-master/parallax.min.js"></script>
+    <script src="./assets/js/contact.js"></script> -->
 </body>
 
 </html>
