--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,8 @@
 
     <link rel="stylesheet" type="text/css" href="./assets/vendor/bootstrap4/bootstrap.min.css">
     <link href="./assets/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
-    <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
-    <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/animate.css">
     <link rel="stylesheet" type="text/css" href="./assets/plugins/jquery.mb.YTPlayer-3.1.12/jquery.mb.YTPlayer.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/owl.carousel.min.css"> -->
     <link rel="stylesheet" type="text/css" href="./assets/css/main_styles.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/responsive.css">
     <!-- <link rel="stylesheet" type="text/css" href="./assets/css/contact.css">
@@ -29,11 +27,11 @@
     <script src="./assets/js/jquery-3.4.1.min.js"></script>
     <script src="./assets/vendor/bootstrap4/popper.js"></script>
     <script src="./assets/vendor/bootstrap4/bootstrap.min.js"></script>
-    <script src="./assets/plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
-    <script src="./assets/plugins/jquery.mb.YTPlayer-3.1.12/jquery.mb.YTPlayer.js"></script>
+    <!-- <script src="./assets/js/owl.carousel.min.js"></script>
+    <script src="./assets/plugins/jquery.mb.YTPlayer-3.1.12/jquery.mb.YTPlayer.js"></script> -->
     <script src="./assets/plugins/easing/easing.js"></script>
-    <script src="./assets/plugins/masonry/masonry.js"></script>
-    <script src="./assets/plugins/masonry/images_loaded.js"></script>
+    <!-- <script src="./assets/plugins/masonry/masonry.js"></script>
+    <script src="./assets/plugins/masonry/images_loaded.js"></script> -->
     <script src="./assets/js/custom.js"></script>
     <!-- <script src="./assets/plugins/parallax-js-master/parallax.min.js"></script>
     <script src="./assets/js/contact.js"></script> -->
