--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
     <!-- <link rel="stylesheet" type="text/css" href="./assets/css/owl.carousel.min.css"> -->
     <link rel="stylesheet" type="text/css" href="./assets/css/main_styles.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/responsive.css">
-    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/contact.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/contact_responsive.css"> -->
+    <link rel="stylesheet" type="text/css" href="./assets/css/contact.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/contact_responsive.css">
     <title>Cuba Museo</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,8 +33,9 @@
     <!-- <script src="./assets/plugins/masonry/masonry.js"></script>
     <script src="./assets/plugins/masonry/images_loaded.js"></script> -->
     <script src="./assets/js/custom.js"></script>
-    <!-- <script src="./assets/plugins/parallax-js-master/parallax.min.js"></script>
-    <script src="./assets/js/contact.js"></script> -->
+    <!-- <script src="./assets/plugins/parallax-js-master/parallax.min.js"></script>-->
+    <script src="./assets/js/contact.js"></script>
+    <!-- <script src="src/js/angular-socialshare.js"></script> -->
 </body>
 
 </html>
